- Added Raw emulation, like the real device
- Allow ddh variable size (from 3 up to 256 sectors)
- Allow to format only one side on ddh files
- Allow to clear contents when formatting ("c/borrado" or "s/borrado") on ddh files

Improved Spectrum Next emulation:
- Fixed DMA Datagear burst mode when prescaler=0
- Added Layer modes 6 and 7 (blend modes)
- Fixed esxdos call DISK_FILEMAP

Improved Debug:
- CPU history: allow to change memory pointer to the PC register show in history
- Show when CPU is in wait state
- Added breakpoint action save-binary
- Added Symbol Table loading

Improved Hexadecimal editor:
- Now the data is refreshed when the window has the focus too
- Now the memory pointer can follow a expression (CPU register for example)

Improved ZX Vision:
- More GUI improvements following more guidelines from the (retro)-specification IBM CUA
- Menus show previous menus when selecting submenus
- When selecting ZX Vision Style, it is applied on moving cursor
- Improve cursor movement on menus when pressing PgDn/PgUp
- Warn on the resize mark when a window has to be enlarged (because there is text beyond current size)
- Allow a window to disable scroll actions
- Process switcher is located at bottom-left part of the display by default
- Now rainbow bars on windows title are visible on all GUI Styles when an error or splash message appears

Improved ZX Desktop:
- Allow to enable/disable upper and lower buttons independently
- Allow right click on the device icons located on the lower part of the ZX Desktop

* Fixes:

Remove buffer full indicator when pressing shift+e on External Audio Source window
Fixed right click on upper buttons when menu closed and no windows open
Fixed alt key pressed when changing to another window by using alt-tab on xwindow, cocoa, sdl1 and sdl2 drivers
Fixed TZX autoload as Real Tape on Spectrum +3
Fixed hotswap ZX80 to ZX81, ZX81 to ZX80
Fixed Amstrad CPC Scroll